@@ -3,6 +3,7 @@ March 2022 7.9
   - LAM Pro:
    -> Support multiple TO addresses for license expiration email
    -> Custom scripts: $INFO.debug$ wildcard prints all possible wildcards and their values
+   -> Custom scripts: extra INFO wildcards for password change options
    -> Configuration import: allow to select self service profiles to import (168)
   - Fixed bugs:
    -> Tree view: check session expiration
